--- a/src/frontend/src/lib/styles/global/theme.scss
+++ b/src/frontend/src/lib/styles/global/theme.scss
@@ -117,17 +117,17 @@ figcaption {
 }
 
 ::selection {
-	background: var(--color-blue);
+	background: var(--color-misty-rose);
 	color: var(--color-off-white);
 }
 
 ::-moz-selection {
-	background: var(--color-blue);
+	background: var(--color-misty-rose);
 	color: var(--color-off-white);
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: var(--color-blue);
+	background-color: var(--color-misty-rose);
 }
 
 ::-webkit-scrollbar-track {
