--- a/src/frontend/src/lib/styles/utilities/padding.scss
+++ b/src/frontend/src/lib/styles/utilities/padding.scss
@@ -2,6 +2,14 @@
 
 $property: padding;
 
+@include utilities.generate(p-0, $property, 0);
+@include utilities.generate(px-0, #{$property}-left, 0);
+@include utilities.generate(px-0, #{$property}-right, 0);
+@include utilities.generate(py-0, #{$property}-top, 0);
+@include utilities.generate(py-0, #{$property}-bottom, 0);
+@include utilities.generate(pt-0, #{$property}-top, 0);
+@include utilities.generate(pb-0, #{$property}-bottom, 0);
+
 @include utilities.generate(p-0\.25, $property, var(--padding-0_25x));
 @include utilities.generate(px-0\.25, #{$property}-left, var(--padding-0_25x));
 @include utilities.generate(px-0\.25, #{$property}-right, var(--padding-0_25x));
