build(frontend): bump alchemy, few dev dependencies and prettier

--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -11,7 +11,10 @@ button {
 	--button-border-radius: var(--border-radius-sm);
 	border-radius: var(--button-border-radius);
 
-	transition: color 0.25s ease-out, background 0.25s ease-out, opacity 0.25s ease-out;
+	transition:
+		color 0.25s ease-out,
+		background 0.25s ease-out,
+		opacity 0.25s ease-out;
 
 	border: 1px solid transparent;
 
