--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -20,17 +20,35 @@ button {
 
 	--button-padding: var(--padding) var(--padding-3x);
 
-	&.primary {
+	&.primary,
+	&.secondary,
+	&.user,
+	&.ic {
 		justify-content: flex-start;
-
-		background: var(--color-white);
 
 		border: 2px solid var(--color-blue);
 
 		padding: var(--button-padding);
 	}
 
-	&.labelled {
+	&.primary,
+	&.secondary {
+		font-weight: var(--font-weight-bold);
+	}
+
+	&.primary {
+		background: var(--color-blue);
+		color: var(--color-white);
+	}
+
+	&.secondary,
+	&.ic,
+	&.user {
+		background: var(--color-white);
+		color: var(--color-blue);
+	}
+
+	&.ic {
 		padding: var(--padding) var(--padding-4x) var(--padding) var(--padding-2x);
 
 		span {
@@ -49,13 +67,15 @@ button {
 		}
 	}
 
-	&.secondary {
+	&.hero {
 		justify-content: center;
 
 		background: var(--color-off-white);
 		color: var(--color-blue);
 
 		padding: var(--padding-1_5x) var(--padding-3x);
+
+		font-weight: var(--font-weight-bold);
 	}
 
 	&.tertiary {
@@ -83,7 +103,7 @@ button {
 		padding: var(--button-padding);
 	}
 
-	&.primary,
+	&.user,
 	&.wallet-connect {
 		&.icon {
 			padding: 0;
