--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -78,7 +78,8 @@ button {
 		font-weight: var(--font-weight-bold);
 	}
 
-	&.primary, &.secondary {
+	&.primary,
+	&.secondary {
 		&.full {
 			width: 100%;
 		}
