style(frontend): dialog padding

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -55,7 +55,7 @@
 	--dialog-max-width: 100vw;
 	--dialog-height: 100vh;
 	--dialog-border-radius: 0;
-	--dialog-padding-y: var(--padding-4x);
+	--dialog-padding-y: var(--padding-1_5x);
 	--dialog-padding-x: var(--padding-2x);
 
 	// CSS variables used when the content needs to fit the maximum height as when a QR-Code reader is embedded in a modal
