feat(frontend): static progress

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -20,9 +20,9 @@
 
 	--animation-time-normal: 0.2s;
 
-	--progress-color: var(--color-blue);
+	--progress-color: var(--color-medium-purple);
 	--progress-color-contrast: var(--color-white);
-	--progress-color-rgb: 59, 0, 185;
+	--progress-color-rgb: 137, 105, 213;
 
 	--overlay-background: var(--color-off-white);
 	--overlay-background-contrast: var(--color-vampire-black);
