--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -13,6 +13,7 @@
 	// https://www.color-name.com
 	--color-goldenrod: #dfa81b;
 	--color-cyclamen: #ea6c99;
+	--color-medium-purple: #8969d5;
 
 	// Brand
 	--color-wallet-connect: #3b99fc;
