--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -14,6 +14,7 @@
 	--color-goldenrod: #dfa81b;
 	--color-cyclamen: #ea6c99;
 	--color-medium-purple: #8969d5;
+	--color-platinum: #e4e4e4;
 
 	// Brand
 	--color-wallet-connect: #3b99fc;
