--- a/src/frontend/src/lib/styles/utilities/border-radius.scss
+++ b/src/frontend/src/lib/styles/utilities/border-radius.scss
@@ -3,3 +3,11 @@
 @include utilities.generate(rounded-sm, border-radius, var(--border-radius-sm));
 @include utilities.generate(rounded-lg, border-radius, var(--border-radius-lg));
 @include utilities.generate(rounded-50, border-radius, 50%);
+@include utilities.generate(rounded-tr-sm, border-top-right-radius, var(--border-radius-sm));
+@include utilities.generate(rounded-br-sm, border-bottom-right-radius, var(--border-radius-sm));
+@include utilities.generate(rounded-bl-sm, border-bottom-left-radius, var(--border-radius-sm));
+@include utilities.generate(rounded-tl-sm, border-top-left-radius, var(--border-radius-sm));
+@include utilities.generate(rounded-tr-lg, border-top-right-radius, var(--border-radius-lg));
+@include utilities.generate(rounded-br-lg, border-bottom-right-radius, var(--border-radius-lg));
+@include utilities.generate(rounded-bl-lg, border-bottom-left-radius, var(--border-radius-lg));
+@include utilities.generate(rounded-tl-lg, border-top-left-radius, var(--border-radius-lg));
