--- a/src/frontend/src/lib/styles/utilities/background.scss
+++ b/src/frontend/src/lib/styles/utilities/background.scss
@@ -14,3 +14,4 @@ $property: background;
 @include utilities.generate(bg-goldenrod, $property, var(--color-goldenrod));
 @include utilities.generate(bg-cyclamen, $property, var(--color-cyclamen));
 @include utilities.generate(bg-medium-purple, $property, var(--color-medium-purple));
+@include utilities.generate(bg-platinum, $property, var(--color-platinum));
