--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -15,6 +15,7 @@
 	--color-cyclamen: #ea6c99;
 	--color-medium-purple: #8969d5;
 	--color-platinum: #e4e4e4;
+	--color-mountain-meadow: #30af91;
 
 	// Brand
 	--color-wallet-connect: #3b99fc;
