--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -1,7 +1,7 @@
 @use '../mixins/media';
 
 :root {
-	--positive-emphasis: #30af91;
+	--positive-emphasis: var(--color-mountain-meadow);
 	--positive-emphasis-rgb: 48, 175, 145;
 
 	--warning-emphasis-shade: var(--color-goldenrod);
@@ -20,9 +20,9 @@
 
 	--animation-time-normal: 0.2s;
 
-	--progress-color: var(--color-blue);
+	--progress-color: var(--color-medium-purple);
 	--progress-color-contrast: var(--color-white);
-	--progress-color-rgb: 59, 0, 185;
+	--progress-color-rgb: 137, 105, 213;
 
 	--overlay-background: var(--color-off-white);
 	--overlay-background-contrast: var(--color-vampire-black);
@@ -114,7 +114,7 @@ div.modal {
 	color: var(--color-dark);
 	font-weight: var(--font-weight-normal);
 
-	div.content > div {
+	div.content > div:first-of-type {
 		padding: var(--padding-1_5x) 0 0;
 	}
 }
