--- a/src/frontend/src/lib/styles/utilities/color.scss
+++ b/src/frontend/src/lib/styles/utilities/color.scss
@@ -14,3 +14,6 @@ $property: color;
 @include utilities.generate(text-misty-rose, $property, var(--color-misty-rose));
 @include utilities.generate(text-goldenrod, $property, var(--color-goldenrod));
 @include utilities.generate(text-cyclamen, $property, var(--color-cyclamen));
+@include utilities.generate(text-medium-purple, $property, var(--color-medium-purple));
+@include utilities.generate(text-platinum, $property, var(--color-platinum));
+@include utilities.generate(text-mountain-meadow, $property, var(--color-mountain-meadow));
