--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -114,7 +114,7 @@ div.modal {
 	color: var(--color-dark);
 	font-weight: var(--font-weight-normal);
 
-	div.content > div:first-of-type {
+	div.content > div:first-child {
 		padding: var(--padding-1_5x) 0 0;
 	}
 }
