style(frontend): header menu always as icon

--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -134,14 +134,16 @@ button {
 			}
 
 			@include media.min-width(medium) {
-				padding: var(--button-padding);
-				border-radius: var(--button-border-radius);
+				&.desktop-wide {
+					padding: var(--button-padding);
+					border-radius: var(--button-border-radius);
 
-				width: inherit;
-				height: inherit;
+					width: inherit;
+					height: inherit;
 
-				span {
-					display: block;
+					span {
+						display: block;
+					}
 				}
 			}
 		}
