--- a/src/frontend/src/lib/styles/utilities/display.scss
+++ b/src/frontend/src/lib/styles/utilities/display.scss
@@ -5,3 +5,5 @@ $property: display;
 @include utilities.generate(hidden, $property, none);
 @include utilities.generate(block, $property, block);
 @include utilities.generate(flex, $property, flex);
+@include utilities.generate(contents, $property, contents);
+@include utilities.generate(inline-block, $property, inline-block);
