feat(frontend): review alpha msg

--- a/src/frontend/src/lib/styles/utilities/text-decoration.scss
+++ b/src/frontend/src/lib/styles/utilities/text-decoration.scss
@@ -5,7 +5,8 @@ $property: text-decoration;
 @include utilities.generate(underline, $property, underline);
 @include utilities.generate(no-underline, $property, none);
 
-*:hover {
+*:hover,
+*:focus {
 	@include utilities.generate(underline, $property, underline);
 	@include utilities.generate(no-underline, $property, none);
 }
