--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -11,6 +11,7 @@
 @import './global/text';
 @import './global/gix';
 @import './global/position';
+@import './global/links';
 
 @import './utilities/display';
 @import './utilities/text';
