style(frontend): fix typo in generate mixin

--- a/src/frontend/src/lib/styles/mixins/_utilities.scss
+++ b/src/frontend/src/lib/styles/mixins/_utilities.scss
@@ -25,7 +25,7 @@
 	}
 
 	.lg\:#{$selector},
-	.lb\:#{$selector}[class*='-'],
+	.lg\:#{$selector}[class*='-'],
 	.lg\:#{$selector}[class*='xs\:'],
 	.lg\:#{$selector}[class*='sm\:'],
 	.lg\:#{$selector}[class*='md\:'] {
