--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -76,6 +76,8 @@
 		--dialog-max-height: var(--alert-max-height);
 		--dialog-border-radius: var(--alert-border-radius);
 		--dialog-padding-x: var(--padding-3x);
+
+		--section-max-width: 576px;
 	}
 
 	@media (min-width: 768px) and (min-height: 560px) {
