--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -28,7 +28,7 @@ button {
 	&.ic {
 		justify-content: flex-start;
 
-		border: 2px solid var(--color-blue);
+		border: 1px solid var(--color-blue);
 
 		padding: var(--button-padding);
 	}
@@ -146,6 +146,13 @@ button {
 					}
 				}
 			}
+		}
+	}
+
+	&.user {
+		&.icon {
+			gap: var(--padding-0_5x);
+			--button-padding: var(--padding);
 		}
 	}
 }
