feat: init token switcher

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -126,7 +126,7 @@ div.popover {
 	--background-contrast: var(--overlay-background-contrast);
 
 	.wrapper {
-		padding: var(--padding-1_5x);
+		padding: var(--padding-2x);
 		--padding: var(--padding-1_5x);
 	}
 }
