feat: token network selector

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -127,6 +127,6 @@ div.popover {
 
 	.wrapper {
 		padding: var(--padding-2x);
-		--padding: var(--padding-1_5x);
+		--padding: var(--padding-2x);
 	}
 }
