style: stronger input border as in Figma design

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -37,8 +37,8 @@
 	// Input
 	--input-background: var(--color-white);
 	--focus-background: var(--color-white);
-	--input-border-color: #e9e7e3;
-	--input-border-size: 1px;
+	--input-border-color: var(--color-dark);
+	--input-border-size: 2px;
 	--animation-time-short: 0.2s;
 	--secondary: var(--color-dark-blue);
 
