feat: update gix and set a max-width for popover

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -128,5 +128,11 @@ div.popover {
 	.wrapper {
 		padding: var(--padding-2x);
 		--padding: var(--padding-2x);
+
+		max-width: calc(100vw - (2 * var(--padding)));
+
+		@include media.min-width(xsmall) {
+			max-width: 300px;
+		}
 	}
 }
