--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -136,3 +136,8 @@ div.popover {
 		}
 	}
 }
+
+div.toggle {
+	--card-background-contrast: var(--color-dust);
+	--card-background: var(--color-dark-blue);
+}
