style: popover background white

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -24,7 +24,7 @@
 	--progress-color-contrast: var(--color-white);
 	--progress-color-rgb: 137, 105, 213;
 
-	--overlay-background: var(--color-off-white);
+	--overlay-background: var(--color-white);
 	--overlay-background-contrast: var(--color-dark);
 
 	--overlay-z-index: calc(var(--z-index) + 1);
