--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -27,6 +27,11 @@
 	--overlay-background: var(--color-white);
 	--overlay-background-contrast: var(--color-dark);
 
+	--tooltip-background: var(--overlay-background);
+	--tooltip-background-contrast: var(--overlay-background-contrast);
+	--tooltip-border-size: 1.5px;
+	--tooltip-border-color: #ebedf9;
+
 	--overlay-z-index: calc(var(--z-index) + 1);
 	--modal-z-index: calc(var(--overlay-z-index) + 3);
 	--toast-info-z-index: calc(var(--overlay-z-index) + 4);
@@ -128,6 +133,8 @@ div.popover {
 	.wrapper {
 		padding: var(--padding-2x);
 		--padding: var(--padding-2x);
+
+		--border-radius: 16px;
 
 		max-width: calc(100vw - (2 * var(--padding)));
 
