style: lighten input border

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -42,8 +42,8 @@
 	// Input
 	--input-background: var(--color-white);
 	--focus-background: var(--color-white);
-	--input-border-color: var(--color-dark);
-	--input-border-size: 2px;
+	--input-border-color: var(--color-grey);
+	--input-border-size: 1px;
 	--animation-time-short: 0.2s;
 	--secondary: var(--color-dark-blue);
 
