--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -128,13 +128,16 @@ div.modal {
 		max-width: 100%;
 	}
 
-	div.content {
+	div.content:not(:has(+ div.transition)),
+	div.transition:not(:has(+ form)),
+	div.transition > form {
 		display: flex;
 		flex-direction: column;
 		min-height: 100%;
 
 		> div.stretch {
 			flex: 1;
+			margin: 0 0 var(--padding-3x);
 		}
 	}
 }
