--- a/src/frontend/src/lib/styles/global/variables.scss
+++ b/src/frontend/src/lib/styles/global/variables.scss
@@ -3,6 +3,7 @@
 
 	--padding-0_25x: calc(var(--padding) / 4);
 	--padding-0_5x: calc(var(--padding) / 2);
+	--padding-0_75x: calc((var(--padding) * 2) / 3);
 	--padding: 0.45rem;
 	--padding-1_25x: calc(var(--padding) * 1.25);
 	--padding-1_5x: calc(var(--padding) * 1.5);
@@ -13,7 +14,8 @@
 	--padding-8x: calc(var(--padding) * 8);
 
 	--border-radius-sm: 8px;
-	--border-radius-lg: 32px;
+	--border-radius-md: calc(var(--border-radius-sm) * 2);
+	--border-radius-lg: calc(var(--border-radius-sm) * 4);
 
 	// Overlays - based on --color-dark
 	--backdrop: rgba(14, 0, 45, 0.6);
