style: modal inner spacing

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -124,6 +124,10 @@ div.modal {
 	color: var(--color-dark);
 	font-weight: var(--font-weight-normal);
 
+	div.wrapper.dialog div.container-wrapper {
+		margin: var(--padding-1_5x) var(--padding-1_5x) auto;
+	}
+
 	div.container {
 		max-width: 100%;
 
