--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -19,3 +19,4 @@
 @include meta.load-css('global/border');
 @include meta.load-css('global/scrollbar');
 @include meta.load-css('theme/default-theme');
+@include meta.load-css('theme/dark-theme');
