--- a/src/frontend/src/lib/styles/theme/default-theme.scss
+++ b/src/frontend/src/lib/styles/theme/default-theme.scss
@@ -1,6 +1,6 @@
 @use 'base-colors' as *;
 
-:root {
+html[theme="light"]:root {
 	--color-brand-100: #{$alice-blue};
 	--color-brand-200: #{$water};
 	--color-brand-300: #{$pale-cornflower-blue};
@@ -8,6 +8,7 @@
 	--color-brand-500: #{$cobalt};
 	--color-brand-base: #{$brandeis-blue};
 	--color-brand-600: #{$catalina-blue};
+	--color-brand-text: #{$black};
 
 	--color-warning-lightest: #{$warning-orange};
 	--color-warning-lighter: #{$peach-orange};
