--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -104,14 +104,14 @@ a.as-button {
 	}
 
 	&.secondary:not([disabled]):not(.disabled):not(.loading) {
-		@apply text-brand-primary bg-brand-subtle;
+		@apply text-brand-primary bg-brand-subtle-10;
 
 		&:hover {
-			@apply bg-brand-subtle-alt;
+			@apply bg-brand-subtle-20;
 		}
 
 		&:active {
-			@apply bg-brand-subtle2-alt;
+			@apply bg-brand-subtle-30;
 		}
 	}
 
@@ -123,7 +123,7 @@ a.as-button {
 		}
 
 		&:active {
-			@apply bg-brand-subtle-alt;
+			@apply bg-brand-subtle-20;
 			color: currentColor;
 		}
 
