--- a/src/frontend/src/lib/styles/theme/base-colors.scss
+++ b/src/frontend/src/lib/styles/theme/base-colors.scss
@@ -1,40 +1,15 @@
-$alice-blue: #e8f1ff;
-$water: #d1e3ff;
-$pale-cornflower-blue: #b0cdff;
-$french-sky-blue: #84b2ff;
-$brandeis-blue: #0066ff;
-$cobalt: #004abe;
-$catalina-blue: #012f80;
+$base-white: #ffffff;
+$base-black: #000000;
 
-$warning-orange: #fff3e6;
-$peach-orange: #ffd099;
-$rajah: #feb967;
-$american-orange: #ff8a00;
-$mustard-brown: #cc6e00;
-$philippine-bronze: #663701;
-
-$snow: #fff6f6;
-$pale-pink: #fadfdf;
-$amaranth-pink: #f5a9b8;
-$rusty-red: #dc3545;
-$upsdell-red: #a71d2a;
-$chocolate-cosmos: #520c13;
-
-$aero-blue: #d0f0e0;
-$sea-foam-green: #a2e1c1;
-$medium-aquamarine: #73d1a2;
-$green-crayola: #16b364;
-$dartmouth-green: #087443;
-$british-racing-green: #084c2e;
-
-$black: #000000;
-$dark-gunmetal: #212529;
-$onyx: #343a40;
-$davys-grey: #495057;
-$auro-metal-saurus: #6c757d;
-$cadet-blue: #adb5bd;
-$light-grey: #ced4da;
-$platinum: #dee2e6;
-$bright-grey: #e9ecef;
-$ghost-white: #f8f9fa;
-$white: #ffffff;
+$neutrals-25: #E9ECEF;
+$neutrals-50: #E9ECEF;
+$neutrals-100: #E9ECEF;
+$neutrals-200: #E9ECEF;
+$neutrals-300: #E9ECEF;
+$neutrals-400: #E9ECEF;
+$neutrals-500: #E9ECEF;
+$neutrals-600: #E9ECEF;
+$neutrals-700: #E9ECEF;
+$neutrals-800: #E9ECEF;
+$neutrals-900: #E9ECEF;
+$neutrals-950: #E9ECEF;
