--- a/src/frontend/src/lib/styles/theme/dark-theme.scss
+++ b/src/frontend/src/lib/styles/theme/dark-theme.scss
@@ -1,47 +1,71 @@
 @use 'base-colors' as *;
 
 html[theme="dark"]:root {
-  --color-brand-100: #{$dark-gunmetal};
-  --color-brand-200: #{$water};
-  --color-brand-300: #{$pale-cornflower-blue};
-  --color-brand-400: #{$french-sky-blue};
-  --color-brand-500: #{$cobalt};
-  --color-brand-base: #{$brandeis-blue};
-  --color-brand-600: #{$catalina-blue};
-  --color-brand-text: #{$white};
+  --value-color: $base-white;
 
-  --color-warning-lightest: #{$warning-orange};
-  --color-warning-lighter: #{$peach-orange};
-  --color-warning-light: #{$rajah};
-  --color-warning-default: #{$american-orange};
-  --color-warning-dark: #{$mustard-brown};
-  --color-warning-darker: #{$philippine-bronze};
+  --colors-neutrals-black: #{$base-black};
+  --colors-neutrals-900: #{$dusk-900};
+  --colors-neutrals-800: #{$dusk-800};
+  --colors-neutrals-700: #{$dusk-700};
+  --colors-neutrals-600: #{$dusk-600};
+  --colors-neutrals-500: #{$dusk-500};
+  --colors-neutrals-400: #{$dusk-400};
+  --colors-neutrals-300: #{$dusk-300};
+  --colors-neutrals-200: #{$dusk-200};
+  --colors-neutrals-100: #{$dusk-100};
+  --colors-neutrals-50: #{$dusk-50};
+  --colors-neutrals-25: #{$dusk-25};
+  --colors-neutrals-white: #{$base-white};
 
-  --color-error-lightest: #{$snow};
-  --color-error-lighter: #{$pale-pink};
-  --color-error-light: #{$amaranth-pink};
-  --color-error-default: #{$rusty-red};
-  --color-error-dark: #{$upsdell-red};
-  --color-error-darker: #{$chocolate-cosmos};
+  --alpha-base-100: #{$a-white-100};
+  --alpha-base-95: #{$a-white-95};
+  --alpha-base-90: #{$a-white-90};
+  --alpha-base-80: #{$a-white-80};
+  --alpha-base-70: #{$a-white-70};
+  --alpha-base-60: #{$a-white-60};
+  --alpha-base-50: #{$a-white-50};
+  --alpha-base-40: #{$a-white-40};
+  --alpha-base-30: #{$a-white-30};
+  --alpha-base-20: #{$a-white-20};
+  --alpha-base-10: #{$a-white-10};
+  --alpha-base-5: #{$a-white-5};
 
-  --color-success-lightest: #{$aero-blue};
-  --color-success-lighter: #{$sea-foam-green};
-  --color-success-light: #{$medium-aquamarine};
-  --color-success-default: #{$green-crayola};
-  --color-success-dark: #{$dartmouth-green};
-  --color-success-darker: #{$british-racing-green};
+  --color-background-page: #{$dusk-950};
+  --color-background-primary: var(--colors-neutrals-900);
+  --color-background-primary-inverted: var(--colors-neutrals-100);
+  --color-background-tertiary: var(--colors-neutrals-700);
+  --color-background-surface: var(--colors-neutrals-700);
+  --color-foreground-page: var(--colors-neutrals-white);
+  --color-foreground-primary: var(--colors-neutrals-25);
 
-  --colors-neutrals-black: #{$black};
-  --colors-neutrals-900: #{$dark-gunmetal};
-  --colors-neutrals-800: #{$onyx};
-  --colors-neutrals-700: #{$davys-grey};
-  --colors-neutrals-600: #{$auro-metal-saurus};
-  --colors-neutrals-500: #{$cadet-blue};
-  --colors-neutrals-400: #{$light-grey};
-  --colors-neutrals-300: #{$platinum};
-  --colors-neutrals-200: #{$bright-grey};
-  --colors-neutrals-100: #{$ghost-white};
-  --colors-neutrals-white: #{$white};
+  --color-brand-base: #{$oisy-blue-600};
+  --color-brand-100: #{$oisy-blue-100};
+  --color-brand-200: #{$oisy-blue-200};
+  --color-brand-300: #{$oisy-blue-300};
+  --color-brand-400: #{$oisy-blue-400};
+  --color-brand-500: #{$oisy-blue-500};
+  --color-brand-600: #{$oisy-blue-600};
+
+  --color-warning-lightest: #{$a-sunset-10};
+  --color-warning-lighter: #{$a-sunset-20};
+  --color-warning-light: #{$a-sunset-35};
+  --color-warning-default: #{$sunset-500};
+  --color-warning-dark: #{$sunset-700};
+  --color-warning-darker: #{$sunset-800};
+
+  --color-error-lightest: #{$a-salmon-10};
+  --color-error-lighter: #{$a-salmon-20};
+  --color-error-light: #{$a-salmon-35};
+  --color-error-default: #{$salmon-500};
+  --color-error-dark: #{$salmon-700};
+  --color-error-darker: #{$salmon-800};
+
+  --color-success-lightest: #{$a-emerald-10};
+  --color-success-lighter: #{$a-emerald-20};
+  --color-success-light: #{$a-emerald-35};
+  --color-success-default: #{$emerald-500};
+  --color-success-dark: #{$emerald-700};
+  --color-success-darker: #{$emerald-800};
 
   #oisy-wallet-logo {
     filter: brightness(0) invert(1);
